# naomi

./: README.md  pyproject.toml  runtest
naomi/: __init__.py  config.py  connection.py  rules.py
tests/: test_conn.py  test_rules.py
