[tool.poetry]
name = "naomi"
version = "0.1.0"
description = ""
authors = ["Tim Ferguson <FergusonTG@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0"
secretstorage = "^3.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
